fix: adjust font size in global styles for improved readability on different screen sizes

--- a/apps/projects/src/styles/global.css
+++ b/apps/projects/src/styles/global.css
@@ -8,7 +8,7 @@
 
 body,
 html {
-  @apply h-dvh w-screen overflow-hidden overscroll-contain bg-white font-body text-[13.5px] font-medium text-dark antialiased dark:bg-dark dark:text-gray-200 2xl:text-[14px];
+  @apply h-dvh w-screen overflow-hidden overscroll-contain bg-white font-body text-[13px] font-medium text-dark antialiased dark:bg-dark dark:text-gray-200 2xl:text-[13.5px];
 }
 
 @media not all and (min-resolution: 0.001dpcm) {
